--- a/calculator.html
+++ b/calculator.html
@@ -10,27 +10,27 @@
     <div class="display"><input type="text" readonly size="18" id="screen"></div>
     <div id="button_area">
 
-    <p> <button type="button" class="button_clear" value="C" onclick='clr("")'>Clr</button></p>
+    <p> <button type="button" id="button_clear" class="button_clear" value="C">Clr</button></p>
 
-    <p><button type="button" class="button_black" value="7" onclick='calc("7")'>7</button>
-    <button type="button" class="button_black" value="8" onclick='calc("8")'>8</button>
-    <button type="button" class="button_black" value="9" onclick='calc("9")'>9</button>
-    <button type="button" class="button_black" value="/" onclick='calc("/")'>/</button></p>
+    <p><button type="button" id='button_7' class="button_black" value="7">7</button>
+    <button type="button" id='button_8' class="button_black" value="8">8</button>
+    <button type="button" id='button_9' class="button_black" value="9">9</button>
+    <button type="button" id='button_fwdslash' class="button_black" value="/">/</button></p>
 
-    <p><button type="button" class="button_black" value="4" onclick='calc("4")'>4</button>
-    <button type="button" class="button_black" value="5" onclick='calc("5")'>5</button>
-    <button type="button" class="button_black" value="6" onclick='calc("6")'>6</button>
-    <button type="button" class="button_black" value="*" onclick='calc("*")'>*</button></p>
+    <p><button type="button" id='button_4' class="button_black" value="4">4</button>
+    <button type="button" id='button_5' class="button_black" value="5">5</button>
+    <button type="button" id='button_6' class="button_black" value="6">6</button>
+    <button type="button" id='button_asterisk' class="button_black" value="*">*</button></p>
 
-    <p><button type="button" class="button_black" value="1" onclick='calc("1")'>1</button>
-    <button type="button" class="button_black" value="2" onclick='calc("2")'>2</button>
-    <button type="button" class="button_black" value="3" onclick='calc("3")'>3</button>
-    <button type="button" class="button_black"value="-" onclick='calc("-")'>-</button></p>
+    <p><button type="button" id='button_1' class="button_black" value="1">1</button>
+    <button type="button" id='button_2' class="button_black" value="2">2</button>
+    <button type="button" id='button_3' class="button_black" value="3">3</button>
+    <button type="button" id='button_minus' class="button_black"value="-">-</button></p>
 
-    <p><button type="button" class="button_black" value="0" onclick='calc("0")'>0</button>
-    <button type="button" class="button_black" value="." onclick='calc(".")'>.</button>
-    <button type="button" class="button_black" value="-" onclick='calc("+")'>+</button>
-    <button type="button" class="button_black" value="=" onclick='e()'>=</button></p>
+    <p><button type="button" id='button_0' class="button_black" value="0">0</button>
+    <button type="button" id='button_period' class="button_black" value=".">.</button>
+    <button type="button" id='button_plus' class="button_black" value="+">+</button>
+    <button type="button" id='button_equal' class="button_black" value="=">=</button></p>
     </div>
 
     </div>
